mule-user-guide/v/3.8/maven-support-in-anypoint-studio.adoc
= Maven Support in Anypoint Studio
:keywords: studio, maven, esb, version control, dependencies, libraries

The following sections describe how to enable or disable Maven support for your projects in Anypoint Studio. 

== Setting Your Maven Preferences

You can adjust your Studio preferences so that Studio automatically generates a `pom.xml` file upon project creation.  

. Navigate to *Anypoint Studio* > *Preferences* (or Windows > Preferences in Windows).
. In the *Preferences* panel, click to expand *Anypoint Studio*, then select *Maven*.
. Click *Enable automatic maintenance of pom.xml*. 
+
image:Mavensupport.png[Mavensupport]
+
. Click *Browse* to locate the *Maven installation home directory*.
. Click *Test Maven Configuration* to instruct Studio to run `mvn --version` in the background to validate your Maven installation. Studio produces an output of that command in a box below the button. The results flag any problems with your settings, such as a missing JAVA_HOME environment variable.
+
image:TestMaven.png[TestMaven]
+
[WARNING]
====
*OS X Mavericks*

*If you are running OS X Mavericks, Studio cannot automatically find your Maven installation*, so your home directory field is blank and the Maven support boxes unchecked. 

To use Maven with Anypoint Studio on Mavericks, configure your Maven home directory manually by clicking *Maven installation home directory* > *Browse*. After you locate a valid Maven home, click *Test Maven Configuration* to verify your settings.
====
+
. When finished, click *OK* to save your changes.

== Disabling Maven Support in a Single Studio Project

If you have created Maven project in Studio and wish to disable Maven support for that particular project, right-click the project name in the *Package Explorer*, then select *Mule* > *Disable Support*.

image:maven-disable-support.png[maven-disable-support]

The Disable Support option does not remove the `pom.xml` file, Studio ceases to maintain it for the project. 

You can re-enable Maven support via the Studio menu item if you _did not_ delete the `pom.xml` file. Right-click the project name in the *Package Explorer*, then select *Mule* > *Enable Support*.

[WARNING]
If you disable *Maven support* in your Studio project _and_ delete the `pom.xml` file, you cannot re-enable it via the Maven Support in Studio menu item. To re-initiate Maven support, consult the link:/mule-user-guide/v/3.8/enabling-maven-support-for-a-studio-project[Enabling Maven Support for a Studio Project] documentation.

== See Also

* Follow along with link:/mule-user-guide/v/3.8/building-a-mule-application-with-maven-in-studio[Building a Mule Application with Maven in Studio] which demonstrates the end-to-end experience of using Maven and Studio to create, manage, and deploy a Mule project.
* Learn more about link:/mule-user-guide/v/3.8/importing-a-maven-project-into-studio[importing Maven projects into Studio] or link:/mule-user-guide/v/3.8/enabling-maven-support-for-a-studio-project["mavenizing" existing Studio projects].
* Using Maven outside of Studio? Refer to these instructions for link:/mule-user-guide/v/3.8/configuring-maven-to-work-with-mule-esb[configuring your Maven installation] to point to the necessary repositories.
* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
